<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Button settings -->
    <string name="button_panel_title">Additional buttons</string>

    <string name="button_swap_title">Swap buttons</string>
    <string name="button_swap_summary">Swap the order of recents and back buttons</string>

    <!-- Fingeprint reader settings -->
    <string name="fp_title">Fingerprint</string>

    <string name="fp_home_title">Fingerprint as home button</string>
    <string name="fp_home_summary">Use fingerprint reader as a home button</string>

    <string name="fp_wakeup_title">Fingerprint wakes device</string>
    <string name="fp_wakeup_summary">Allow fingerprint to wake the device while screen is off</string>
</resources>
